--- a/static/leaderboard.html
+++ b/static/leaderboard.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>LeaderBoard</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="background">
-        <div class="page page-left" id="side-left">
-            <a href="/" class="button mini-button button-back">&#8630;</a>
-            <div class="page-title">
+        <div class="page page_type_left" id="side-left">
+            <a href="/" class="button button_size_mini button_type_back">&#8630;</a>
+            <div class="page__title">
                 Отгадывали:
             </div>
-            <table class="scoretable">
+            <table class="score-table">
                 <tr>
                     <th>
                         #
@@ -26,7 +26,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal gold">
+                        <div class="medal medal_type_gold">
                             1
                         </div>
                     </td>
@@ -39,7 +39,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal silver">
+                        <div class="medal medal_type_silver">
                             2
                         </div>
                     </td>
@@ -52,7 +52,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal bronze">
+                        <div class="medal medal_type_bronze">
                             3
                         </div>
                     </td>
@@ -65,7 +65,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             4
                         </div>
                     </td>
@@ -78,7 +78,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             5
                         </div>
                     </td>
@@ -91,7 +91,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             6
                         </div>
                     </td>
@@ -104,7 +104,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             7
                         </div>
                     </td>
@@ -117,7 +117,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             8
                         </div>
                     </td>
@@ -130,7 +130,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             9
                         </div>
                     </td>
@@ -143,7 +143,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             10
                         </div>
                     </td>
@@ -156,7 +156,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             ...
                         </div>
                     </td>
@@ -169,7 +169,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             1996
                         </div>
                     </td>
@@ -182,11 +182,11 @@
                 </tr>
             </table>
         </div>
-        <div class="page page-right" id="side-right">
-            <div class="page-title">
+        <div class="page page_type_right" id="side-right">
+            <div class="page__title">
                 Рисовали:
             </div>
-            <table class="scoretable">
+            <table class="score-table">
                 <tr>
                     <th>
                         #
@@ -200,7 +200,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal gold">
+                        <div class="medal medal_type_gold">
                             1
                         </div>
                     </td>
@@ -213,7 +213,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal silver">
+                        <div class="medal medal_type_silver">
                             2
                         </div>
                     </td>
@@ -226,7 +226,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal bronze">
+                        <div class="medal medal_type_bronze">
                             3
                         </div>
                     </td>
@@ -239,7 +239,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             4
                         </div>
                     </td>
@@ -252,7 +252,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             5
                         </div>
                     </td>
@@ -265,7 +265,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             6
                         </div>
                     </td>
@@ -278,7 +278,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             7
                         </div>
                     </td>
@@ -291,7 +291,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             8
                         </div>
                     </td>
@@ -304,7 +304,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             9
                         </div>
                     </td>
@@ -317,7 +317,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             10
                         </div>
                     </td>
@@ -330,7 +330,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             ...
                         </div>
                     </td>
@@ -343,7 +343,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="medal other">
+                        <div class="medal medal_type_other">
                             1996
                         </div>
                     </td>
@@ -358,5 +358,5 @@
         </div>
     </div>
 </body>
-<script src="scripts/fix_page_size.js"></script>
+<script src="/scripts/fix_page_size.js"></script>
 </html>
