--- a/static/login.html
+++ b/static/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>LogIn</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="background">
-        <div class="page single-page">
-            <a href="/" class="button mini-button button-back">&#8630;</a>
-            <div class="page-title">
+        <div class="page page_type_single">
+            <a href="/" class="button button_size_mini button_type_back">&#8630;</a>
+            <div class="page__title">
                 Авторизация
             </div>
             <br>
@@ -17,16 +17,16 @@
                 Это картинка будет
             </div>
             <form action="#">
-                <p>
-                    <span class="input-label">Nickname:</span>
+                <p class="form__field">
+                    <span class="form__label">Nickname:</span>
                     <input type="text" id="nickname-input">
                 </p>
-                <p>
-                    <span class="input-label">Пароль:</span>
+                <p class="form__field">
+                    <span class="form__label">Пароль:</span>
                     <input type="password" id="password-input">
                 </p>
                 <br>
-                <input class="button button-submit" type="submit" alt="qwe" value="Войти!">
+                <input class="button button_type_submit" type="submit" value="Войти!">
             </form>
         </div>
     </div>
