--- a/static/signup.html
+++ b/static/signup.html
@@ -3,35 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>SignUp</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="background">
-        <div class="page single-page">
-            <a href="/" class="button mini-button button-back">&#8630;</a>
-            <div class="page-title">
+        <div class="page page_type_single">
+            <a class="button button_size_mini button_type_back" href="/">&#8630;</a>
+            <div class="page__title">
                 Регистрация
             </div>
             <br>
             <form class="form" action="#">
-                <p class="input-block">
-                    <span class="input-label">Введите Email:</span>
+                <p class="form__field">
+                    <span class=form__label>Введите Email:</span>
                     <input type="email" id="email-input" placeholder="ant-semenov@mail.ru">
                 </p>
-                <p class="input-block">
-                    <span class="input-label">Введите Nickname:</span>
+                <p class="form__field">
+                    <span class="form__label">Введите Nickname:</span>
                     <input type="text" id="nickname-input" placeholder="super_pizza">
                 </p>
-                <p class="input-block">
-                    <span class="input-label">Введите пароль:</span>
+                <p class="form__field">
+                    <span class="form__label">Введите пароль:</span>
                     <input type="password" id="password-input">
                 </p>
-                <p class="input-block">
-                    <span class="input-label">Повторите пароль:</span>
+                <p class="from__field">
+                    <span class="form__label">Повторите пароль:</span>
                     <input type="password" id="password-rep-input">
                 </p>
                 <br>
-                <input class="button button-submit" type="submit" alt="qwe" value="Зарегистрироваться!">
+                <input class="button button_type_submit" type="submit" value="Зарегистрироваться!">
             </form>
         </div>
     </div>
