used media queries, bem

--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Index</title>
     <link rel="stylesheet" href="/css/image_croc.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -13,38 +14,38 @@
 
             <div class="user_area">
                 Добро пожаловать!
-                <a href="login">Авторизуйтесь</a>
+                <a href="/login">Авторизуйтесь</a>
                 или
-                <a href="signup">зарегистрируйтесь</a>,
+                <a href="/signup">зарегистрируйтесь</a>,
                 чтобы начать играть!
             </div>
             <br>
             <br>
-            <div class="main" id="main">
+            <div class="croco-image" id="main">
                 <div class="back">
-                    <div class="spike spike1">
+                    <div class="back__spike back__spike_number_1">
                     </div>
-                    <div class="spike spike2">
+                    <div class="back__spike back__spike_number_2">
                     </div>
-                    <div class="spike spike3">
+                    <div class="back__spike back__spike_number_3">
                     </div>
-                    <div class="spike spike4">
+                    <div class="back__spike back__spike_number_4">
                     </div>
-                    <div class="spike spike5">
+                    <div class="back__spike back__spike_number_5">
                     </div>
-                    <div class="spike spike6">
+                    <div class="back__spike back__spike_number_6">
                     </div>
-                    <div class="spike spike7">
+                    <div class="back__spike back__spike_number_7">
                     </div>
-                    <div class="spike spike8">
+                    <div class="back__spike back__spike_number_8">
                     </div>
                 </div>
-                <div class="rotate-arm">
+                <div class="rotate-part">
                     <div class="brush">
                     </div>
                     <div class="drop">
                     </div>
-                    <div class="arm2">
+                    <div class="arm arm_type_left">
                     </div>
                 </div>
                 <div class=base>
@@ -54,20 +55,20 @@
                 <div class="top">
                 </div>
                 <div class="eye">
-                    <div class="iris">
-                        <div class="dot">
+                    <div class="eye__iris">
+                        <div class="eye__dot">
                         </div>
                     </div>
                 </div>
                 <div class="tail" id="tail">
                 </div>
-                <div class="leg1">
+                <div class="leg leg_type_right">
                 </div>
-                <div class="leg2">
+                <div class="leg leg_type_left">
                 </div>
                 <div class="circle">
                 </div>
-                <div class="arm1">
+                <div class="arm arm_type_right">
                 </div>
             </div>
         </div>
@@ -76,19 +77,18 @@
             <br>
             <br>
             <div class="menu">
-                <a class="button menu__button menu__button_play" href="/game">
+                <a class="button button_size_big menu__button menu__button_play" href="/game">
                 Играть!
             </a>
-                <a class="button menu__button" href="/leaderboard">
+                <a class="button button_size_big menu__button" href="/leaderboard">
                 Рейтинг
             </a>
-                <a class="button menu__button" href="/about">
+                <a class="button button_size_big menu__button" href="/about">
                 Об игре
             </a>
             </div>
         </div>
 </div>
 <script src="/scripts/image_croc.js"></script>
-<script src="/scripts/fix_page_size.js"></script>
 </body>
 </html>
