--- a/static/login.html
+++ b/static/login.html
@@ -26,7 +26,7 @@
                     <input type="password" id="password-input">
                 </p>
                 <br>
-                <input class="button button_type_submit" type="submit" value="Войти!">
+                <input class="button button_size_big button_type_submit" type="submit" value="Войти!">
             </form>
         </div>
     </div>
