--- a/static/signup.html
+++ b/static/signup.html
@@ -31,7 +31,7 @@
                     <input type="password" id="password-rep-input">
                 </p>
                 <br>
-                <input class="button button_type_submit" type="submit" value="Зарегистрироваться!">
+                <input class="button button_size_big button_type_submit" type="submit" value="Зарегистрироваться!">
             </form>
         </div>
     </div>
