renamed html classes

--- a/static/index.html
+++ b/static/index.html
@@ -22,53 +22,53 @@
             <br>
             <br>
             <div class="croco-image" id="main">
-                <div class="back">
-                    <div class="back__spike back__spike_number_1">
+                <div class="croco-image__back">
+                    <div class="croco-image__spike croco-image__spike_number_1">
                     </div>
-                    <div class="back__spike back__spike_number_2">
+                    <div class="croco-image__spike croco-image__spike_number_2">
                     </div>
-                    <div class="back__spike back__spike_number_3">
+                    <div class="croco-image__spike croco-image__spike_number_3">
                     </div>
-                    <div class="back__spike back__spike_number_4">
+                    <div class="croco-image__spike croco-image__spike_number_4">
                     </div>
-                    <div class="back__spike back__spike_number_5">
+                    <div class="croco-image__spike croco-image__spike_number_5">
                     </div>
-                    <div class="back__spike back__spike_number_6">
+                    <div class="croco-image__spike croco-image__spike_number_6">
                     </div>
-                    <div class="back__spike back__spike_number_7">
+                    <div class="croco-image__spike croco-image__spike_number_7">
                     </div>
-                    <div class="back__spike back__spike_number_8">
-                    </div>
-                </div>
-                <div class="rotate-part">
-                    <div class="brush">
-                    </div>
-                    <div class="drop">
-                    </div>
-                    <div class="arm arm_type_left">
+                    <div class="croco-image__spike croco-image__spike_number_8">
                     </div>
                 </div>
-                <div class=base>
+                <div class="croco-image__rotate-arm">
+                    <div class="croco-image__brush">
+                    </div>
+                    <div class="croco-image__drop">
+                    </div>
+                    <div class="croco-image__arm croco-image__arm_type_left">
+                    </div>
                 </div>
-                <div class="bottom">
+                <div class="croco-image__base">
                 </div>
-                <div class="top">
+                <div class="croco-image__bottom">
                 </div>
-                <div class="eye">
-                    <div class="eye__iris">
-                        <div class="eye__dot">
+                <div class="croco-image__top">
+                </div>
+                <div class="croco-image__eye">
+                    <div class="croco-image__iris">
+                        <div class="croco-image__dot">
                         </div>
                     </div>
                 </div>
-                <div class="tail" id="tail">
+                <div class="croco-image__tail" id="tail">
                 </div>
-                <div class="leg leg_type_right">
+                <div class="croco-image__leg croco-image__leg_type_right">
                 </div>
-                <div class="leg leg_type_left">
+                <div class="croco-image__leg croco-image__leg_type_left">
                 </div>
-                <div class="circle">
+                <div class="croco-image__circle">
                 </div>
-                <div class="arm arm_type_right">
+                <div class="croco-image__arm croco-image__arm_type_right">
                 </div>
             </div>
         </div>
