--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,9 @@
     <!-- -----------------------Index---------------------------- -->
 
     <div class="page page_type_left" id="js-index-leftpage">
+        <div class="page__notification" id="js-index-notification">
+            Вы успешно зарегистрированы!
+        </div>
         <div class="user-area" id="js-index-userareaLogout">
             Добро пожаловать!
             <a id="js-index-login">Авторизуйтесь</a>
